update in styling

--- a/src/components/NavBar/navbar.module.css
+++ b/src/components/NavBar/navbar.module.css
@@ -58,7 +58,7 @@
   z-index: 101;
 }
 
-a {
+.link {
   text-decoration: none;
   color: #fff;
 }
@@ -75,6 +75,9 @@ a {
   }
   .active {
     display: none;
+  }
+  .link {
+    color: #111;
   }
 }
 
